--- a/12주차/김윤경.md
+++ b/12주차/김윤경.md
@@ -140,7 +140,7 @@
 - 6-68에서는 포인트컷을 따로 만들지 않고 <aop:advisor> 안에 직접 pointcut 표현식을 넣었다.
 - 태그가 하나 줄어듦으로써 설정이 더 짧고 간단해졌다.
 
-### 트랜잭션 속성
+### 6.6 트랜잭션 속성
 
 <img width="612" height="325" alt="image" src="https://github.com/user-attachments/assets/02638414-a81e-41ba-8dc4-52ec575d1b4e" />
 
@@ -150,39 +150,189 @@
 - 예외가 발생하면 트랜잭션 롤백 후 예외 다시 던져진다.
 - 트랜잭션을 가져올 때 파라미터로 트랜잭션 매니저에게 전달하는 DefaultTransactionDefinition은 용도가 무엇인지 알아보자.
 
-# 6.6 트랜잭션 속성
+# 6.6 트랜잭션 정의
+
+- 트랜잭션이라고 모두 같은 방식으로 동작하는 것은 아니다.
+- 트랜잭션 경계 안에서 진행된 작업은 commit()을 통해 모두 성공하거나 rollback()을 통해 모두 취소돼야 한다.
+- 그런데 이 밖에도 트랜잭션의 동작방식을 제어할 수 있는 몇가지 조건이 있다.
+- DefaultTransactionDefinition이 구현하고 있는 TransactionDefinition 인터페이스는 트랜잭션의 동작방식에 영향을 줄 수 있는 네 가지 속성을 정의하고 있다. 
+
+### 트랜잭션 전파
+
+- 트랜잭션 전파 : 트랜잭션의 경계에서 이미 진행 중인 트랜잭션이 있을때, 또는 없을 때 어떻게 동작할 것인가를 결정하는 방식.
+
+<img width="397" height="202" alt="image" src="https://github.com/user-attachments/assets/fac8f847-58b5-485c-b95b-bcad053f2898" />
+
+- 6-22 그림을 설명하자면 A는 자기 트랜잭션을 시작하고 있는데 A가 처리 중간에 B.method()를 호출한다. 이때 B도 트랜잭션이 필요한 코드라고 가정해보면
+- 가능한 선택지 2개가 있다.
+  - 1. B가 A 트랜잭션에 참여한다. B는 새 트랜잭션을 만들지 않고 A 트랜잭션 안에 들어가서 같이 실행된다. 그러면 A나 B에서 예외 발생해서 둘 다 롤백된다. A와 B가 하나의 트랜잭션으로 묶인다.
+  - 2. B가 독립적인 새 트랜잭션을 만든다. B는 A와 관계없이 자기 트랜잭션을 새로 시작한다. 그러면 B 트랜잭션이 끝나면 B의 트랜잭션은 독자적으로 커밋되거나 롤백된다. 이후에 A에서 예외가 발생해 A가 롤백되더라도 B에서 이미 종료된 트랜잭션의 결과에는 영향을 주지 않는다. 
+
+- 즉 이미 실행 중인 트랜잭션이 있을 때, 그 안에서 또 다른 트랜잭션이 필요한 코드(B)가 호출되면 B를 어떤 트랜잭션 안에서 실행할지 결정하는 규칙이 트랜잭션 전파이다.
+
+- 다음 3가지의 트랜잭션 전파속성이다.
+
+- PROPAGATION_REQUIRED
+  - 가장 많이 쓰는 기본 전파 옵션이며
+  <br> 진행 중인 트랜잭션이 없으면 새로 시작한다.
+  <br> 이미 진행 중인 트랜잭션이 있으면 그 트랜잭션에 참여한다.
+  - A, B 둘 다 REQUIRED면 A만 단독 트랜잭션, B만 단독 트랜잭션, A 안에서 B 호출, B 안에서 A 호출 네 가지 다 가능하고 한 트랜잭션으로 묶여 동작하기 쉽다.
+ 
+- PROPAGATION_REQUIRES_NEW
+  - 항상 독립적인 트랜잭션을 새로 만든다. 기존 트랜잭션이 있든 없든 무조건 새 트랜잭션 시작한다.
+ 
+- PROPAGATION_NOT_SUPPORTED
+  - 현재 트랜잭션이 있어도 무시하고 트랜잭션 없이 실행한다.
+  - 그럼 왜 쓸까? -> 보통 트랜잭션 AOP는 여러 메서드에 넓게 적용되는데 특정 메서드만 트랜잭션 적용 제외하고 싶을 수 있다. 포인트컷으로 빼는 건 복잡해질 수 있으니까,그 메서드 전파 속성을 NOT_SUPPORTED로 줘서 트랜잭션 없이 실행하게 만드는 편이 낫다.
+
+- 스프링의 getTransaction()은 무조건 새 트랜잭션을 시작하는 게 아니라, 전파 속성과 현재 트랜잭션 존재 여부에 따라 새로 만들기도 하고 기존 트랜잭션에 참여하기도 한다. 그리고 기존 트랜잭션에 참여한 경우엔, 참여한 쪽은 끝에서 커밋을 못하고 최초 트랜잭션 경계가 정상 종료돼야 커밋될 수 있다.
+
 
 ### 격리수준
 
+- 모든 DB 트랜잭션은 격리수준(isolation level)을 갖고 있어야 한다. 서버환경에서는 여러 개의 트랜잭션이 동시에 진행될 수 있다. 가능하다면 모든 트랜잭션이 순차적으로 진행돼서 다른 트랜잭션의 작업에 독립적인 것이 좋겠지만, 그러자면 성능이 크게 떨어질 수밖에 없다. 따라서 적절하게 격리수준을 조정해서 가능한 한 많은 트랜잭션을 동시에 진행시키면서도 문제가 발생하지 않게 하는 제어가 필요하다.
+- 격리수준은 기본적으로 DB에 설정돼 있지만 JDBC 드라이버나 DataSource 등에서 재설정할 수 있고, 필요하다면 트랜잭션 단위로 격리수준을 조정할 수 있다. DefaultTransactionDefinition에 설정된 격리수준은 ISOLATION_DEFAULT다. 이는 DataSource에 설정되어 있는 디폴트 격리수준을 그대로 따른다는 뜻이다.
+- 기본적으로는 DB나 DataSource에 설정된 디폴트 격리수준을 따르는 편이 좋지만, 특별한 작업을 수행하는 메소드의 경우는 독자적인 격리수준을 지정할 필요가 있다.
+
 ### 제한시간
+
+- 트랜잭션을 수행하는 제한시간(timeout)을 설정할 수 있다. DefaultTransactionDefinition의 기본 설정은 제한시간이 없는 것이다.
+- 제한시간은 트랜잭션을 직접 시작할 수 있는 PROPAGATION_REQUIRED나 PROPAGATION_REQUIRES_NEW와 함께 사용해야만 의미가 있다.
 
 ### 읽기전용
 
+- 읽기전용(read only)으로 설정해두면 트랜잭션 내에서 데이터를 조작하는 시도를 막아줄 수 있다. 또한 데이터 액세스 기술에 따라서 성능이 향상될 수도 있다.
+- TransactionDefinition 타입 오브젝트를 사용하면 네 가지 속성을 이용해 트랜잭션의 동작방식을 제어할 수 있다.
+ 트랜잭션 정의를 수정하려면 어떻게 해야 할까? TransactionDefinition 오브젝트를 생성하고 사용하는 코드는 트랜잭션 경계설정 기능을 가진 TransactionAdvice다. 트랜잭션 정의를 바꾸고 싶다면 디폴트 속성을 갖고 있는 DefaultTransactionDefinition을 사용하는 대신 외부에서 정의된 TransactionDefinition 오브젝트를 DI 받아서 사용하도록 만들면 된다. TransactionDefinition 타입의 빈을 정의해두면 프로퍼티를 통해 원하는 속성을 지정해줄 수 있다.
+- 하지만 이 방법으로 트랜잭션 속성을 변경하면 TransactionAdvice를 사용하는 모든 트랜잭션의 속성이 한꺼번에 바뀐다는 문제가 있다. 그렇다면 원하는 메소드만 선택해서 독자적인 트랜잭션 정의를 적용할 수 있는 방법은 없을까?
+
 ## 6.6.2 트랜잭션 인터셉터와 트랜잭션 속성
+
+- 메소드별로 다른 트랜잭션 정의를 적용하려면 어드바이스의 기능을 확장해야한다. 마치 초기에 TransactionHandler에서 메소드 이름을 이용해 트랜잭션 적용 여부를 판단했던 것과 비슷한 방식을 사용하면 된다. 메소드 이름 패턴에 따라 다른 트랜잭션 정의가 적용되도록 만드는 것이다.
 
 ### TransactionInterceptor
 
+- 스프링에는 이미 트랜잭션 경계설정용 어드바이스가 있다. 그게 바로 'TransactionInterceptor'이다. 
+- TransactionInterceptor는 크게 두 프로퍼티를 가진다.
+  <br> 첫번째는 PlatformTransactionManager, 두번째는 Properties transactionAttributes 이다.
+- transactionAttributes 안에 들어가는 트랜잭션 속성은 TransactionDefinition보다 확장된 개념인 TransactionAttribute로 정의된다.
+  <br> TransactionDefinition의 4가지 속성인 전파, 격리, timeout, readOnly 이외에도 rollbackOn()이라는 메서드를 추가로 가진다.
+
+- 스프링 TransactionInterceptor 기본 정책에는 두 가지 예외처리 방식이 있다. 
+  첫번째는 런타임 예외가 발생하면 트랜잭션은 롤백된다는 것이고 두번째는 체크 예외가 생기면 비즈니스 의미가 있을 수 있으니 기본적으로 트랜잭션을 커밋한다는 것이다.
+- 그런데 TransactionInterceptor가 예외처리 기본 원칙을 따르지 않는 경우가 있을 수 있다.
+- 그래서 rollbackOn()을 통해 기본원칙과 다른 예외처리가 다른 예외처리가 가능하게 한다.
+
+  
 ### 메소드 이름 패턴을 이용한 트랜잭션 속성 지정
+
+<img width="658" height="169" alt="image" src="https://github.com/user-attachments/assets/16c5565e-b1b9-43c5-bc63-01bfcda0aeea" />
+
+- 트랜잭션 속성은 위와 같은 문자열로 정리할 수 있다.
+- 이 중에서 트랜잭션 전파 항목만 필수이고 나머지는 다 생략 가능하다.
+- Properties 타입의 transactionAttributes 프로퍼티는 메서드 패턴과 트랜잭션 속성을 키와 값으로 갖는 컬렉션이다. 
+
+- TransactionInterceptor의 transactionAttributes를 이용하면, 메서드 이름 패턴만으로도 메서드별 트랜잭션 속성을 간단하게 다양하게 설정할 수 있다.
+
+<img width="656" height="352" alt="image" src="https://github.com/user-attachments/assets/2d620e75-0844-4f62-b8d8-b5bbfb30d151" />
+
+- 위의 그림에서 하나를 예시로 들아보자. 
+<br> 이름이 get 으로 시작하는 모든 메서드들은 트랜잭션이 이미 있으면 거기 참여하고 없으면 새로 만들되, 읽기 전용(readOnly) 으로 만들고, 30초 안에 끝내라(timeout 30)라는 말이다.
+
+- 하나의 메서드가 여러 패턴에 매칭될 수 있는데 그땐 가장 정확히 일치하는 패턴이 우선 적용된다.
+
 
 ### tx 네임스페이스를 이용한 설정 방법
 
+- TransactionInterceptor 설정을 tx 태그로 더 간단하게 할 수 있다
+- 원래는 TransactionInterceptor 빈을 직접 만들고 transactionAttributes 프로퍼티에 문자열로 속성을 넣었는데, 스프링은 이걸 더 편하게 하라고 tx 스키마 전용 태그를 제공한다.
+
+- 트랜잭션 속성이 속성(attribute) 형태라서 읽기 쉽고 실수 적다. XML 자동완성 가능을 통해 편하게 작성할 수 있고 값들이 스키마에 정의되어 있어 오타도 검증 가능하다. 
+- 그래서 <bean> 등록보다 tx 태그 사용이 권장된다.
+
 ## 6.6.3 포인트컷과 트랜잭션 속성의 적용 전략
 
+- 트랜잭션 적용 대상 메서드(후보)를 고르는 건 포인트컷이 한다.
+- 그리고 선택된 메서드들에 대해 트랜잭션이 어떤 방식으로 동작할지(전파, 격리, timeout, readOnly 등) 는 트랜잭션 속성으로 결정됨.
+- 어드바이저/어드바이스/포인트컷 설정 방식 자체는 그대로고,결국 설정해야 할 핵심은 두 가지다.
+- expression에 넣을 포인트컷 표현식과 <tx:attributes>에 넣을 트랜잭션 속성이다.
+- 다음은 포인트컷 표현식과 트랜잭션 속성을 정의할 때 따르면 좋은 몇가지 전략이다.
+
+
 ### 트랜잭션 포인트컷 표현식은 타입 패턴이나 빈 이름을 이용한다.
+- 트랜잭션은 “특정 메서드 하나”만 걸지 말고, 보통 서비스 계층 전체에 거는 게 좋다
+- 지금까지는 포인트컷 설명 때문에 upgradeLevels() 같은 한 메서드만 트랜잭션을 걸었지만, 실제로는 비즈니스 로직을 담은 클래스(UserService 등) 의 메서드들은 대부분 트랜잭션 대상이 되는 게 바람직하다.
+
+- add() 같은 메서드도 트랜잭션 적용대서이어야 한다. 다른 DB 작업이 추가될 가능성도 높고, 상위 트랜잭션에 참여해야 할 가능성도 높기 때문이다.
+
+- 조회 메서드도 트랜잭션 걸면 좋다 (readOnly로)
+
+- 포인트컷은 메서드 단위로 너무 세밀하게 잡지 말고 “타입/빈 기준”으로 크게 잡는것이 좋다.
+  <br> 가능하면 클래스보다는 인터페이스 타입 기준으로 타입 패턴을 적용하자. 인터페이스는 클래스에 비해 변경 빈도가 적고 일정한 패턴을 유지하기 쉽기 때문이다.
+
+- bean() 표현식으로 “빈 이름”으로 트랜잭션 대상 선택도 가능하다. 클래스/인터페이스 이름 규칙 잡기 어려울 때 유용하다. 하지만이름이 비슷한 빈이 있으면 주의하도록 하자.
 
 ### 공통된 메소드 이름 규칙을 토앻 최소한의 트랜잭션 어드바이스와 속성을 정의한다.
 
+- 트랜잭션 속성은 그렇게 종류가 많지 않다
+- 그래서 몇 가지 대표 속성만 정해놓고 그에 맞는 메서드 이름 규칙을 만들면 어드바이스 하나만으로 서비스 전부에 트랜잭션 적용 가능하다.
+- 가장 단순하게는 모든 메서드에 기본 트랜잭션을 적용하면 된다
+- 그 다음 단계: 조회 메서드에 readOnly 를 적용한다.
+
+- 예외적인 트랜잭션 패턴은 따로 빼는 게 좋다.
+- 일반 서비스 로직은 위 규칙으로 처리하고, 배치 작업처럼 성격이 다른 클래스는 별도의 advice와 pointcut으로 분리해서 적용해야 관리가 쉽기 때문이다. 
+
 ### 프록시 방식 AOP는 같은 타깃 오브젝트 내의 메소드를 호출할 때는 적용되지 않는다.
+
+- 프록시 기반 AOP는 프록시를 통해 호출될 때만 적용된다. 그래서 같은 클래스 안에서 자기 메서드를 내부 호출하면 트랜잭션이 적용 안된다.
+- 스프링 AOP 구조를 보면 첫번째로 클라이언트가 호출할 때는 프록시 객체를 먼저 거친다. 이히ㅜ에 프록시가 부가기능(트랜잭션 시작/종료)을 적용한 뒤 진짜 타깃 메서드를 호출한다.
+- 근데 타깃 객체가 자기 내부에서 자기 메서드를 부르면 호출이 프록시를 거치지 않고 그냥 this.update() 처럼 내부 호출이 된다. 그래서 트랜잭션 부가기능이 실행되지 않는다
+- 예를 들어 update()에 REQUIRES_NEW 이라는 속성을 줘도, delete() 안에서 update()를 부르면 update()는 새 트랜잭션을 못 만들고 그냥 delete() 트랜잭션에 묶여버린다. 
+- 즉,내가 의도한 트랜잭션 전파 전략이 무시될 수 있다.
+- 해결 방법에는 두가지가 있다.
+  <br> 첫번재는 프록시를 다시 가져와서 호출하는 것이다. 스프링 API로 내 프록시를 다시 가져와서
+프록시를 통해 update()를 호출하게 만드는 방식이다. 
+  <br> 하지만 코드가 더러워지고 비즈니스 로직이 스프링/프록시에 의존하게 된다는 단점이 있다. 
+  <br> 두번째는 AspectJ 방식이다.
+  <br> AspectJ는 프록시가 아니라 클래스 로딩 시점/컴파일 시점에 바이트코드를 직접 바꿔서 내부 호출도 AOP 적용 가능하게 한다. 그래서 self-invocation 문제가 사라짐.
+  <br> 하지만 설정/환경이 더 복잡해진다는 단점이 있다. 
 
 # 6.6.4 트랜잭션 속성 적용
 
 ### 트랜잭션 경계설정의 일원화
 
+- 트랜잭션 경계는 “서비스 계층”에 두는 게 원칙이다. 트랜잭션은 여러 DAO 작업을 하나로 묶어서 처리하는 게 목적이라서,비즈니스 로직이 있는 Service 계층의 메서드가 트랜잭션 경계로 가장 적절하다.
+- DAO를 직접 호출하면 트랜잭션 통제가 깨질 수 있다. 그래서 서비스 계층을 트랜잭션 경계로 정했다면, 다른 계층/모듈에서 DAO를 직접 호출하지 말고 반드시 Service를 거쳐서 호출해야 한다. 왜냐하면 Service를 거쳐야 트랜잭션이 적용되고 부가기능(AOP)이 적용되기 때문이다.
+- 구조를 단순하게 하면 Service 없이 DAO가 경계가 될 수도 있다
+- UserDao 메서드들을 UserService로 끌어올린다. 이게 일원화인데
+  <br> UserService 인터페이스에 4개 메서드를 추가하고 UserServiceImpl에서 그냥 userDao로 위임하게 만든다.
+
 ### 서비스 빈에 적용되는 포인트컷 표현식 등록
+
+- 원래는 upgradeLevels() 메서드에만 트랜잭션을 적용했는데, 이제는 모든 비즈니스 로직 Service 빈 전체에 트랜잭션이 적용되도록 포인트컷을 수정한다.
 
 ### 트랜잭션 속성을 가진 트랜잭션 어드바이스 등록
 
+- 기존에 직접 만든 TransactionAdvice 클래스 대신, 스프링이 기본으로 제공하는 TransactionInterceptor를 쓰는 방식으로 바꾼다.
+- 트랜잭션 속성(전파, readOnly 등)은 메서드 이름 패턴으로 지정하는 게 일반적이고 편하다.
+
+- 이미 aop 스키마를 쓰는 상황이면, 트랜잭션도 <bean>으로 복잡하게 쓰지 말고
+  <br> tx 네임스페이스(스키마)를 추가해서 <tx:advice> 태그로 작성하는 게 더 깔끔하다.
+  <br> <bean> 설정보다 훨씬 읽기 쉽고 간단하며 transactionManager, propagation 같은 값도 태그로 명확하게 보인다. 또한 propagation="REQUIRED" 같은 값은 스키마에 enum으로 정의돼서 오타 검증도 가능하다. 
+
 ### 트랜잭션 속성 테스트
+
+- get* 메서드에 readOnly=true 트랜잭션을 걸어두면 그 안에서 update 같은 쓰기 작업을 하면 예외가 터진다.-를 보여주기 위한 테스트이다.
+- 테스트를 통해 전용 스키마의 태그를 사용해서 정의한 트랜잭션 AOP가 바르게 동작하고, 메소드에 따라 적절한 트랜잭션 속성이 부여도고 있음을 확인할 수 있다. 
+
+<img width="440" height="197" alt="image" src="https://github.com/user-attachments/assets/927bc6bc-df9b-4623-a1ed-f85cbcf05326" />
+
+<img width="426" height="129" alt="image" src="https://github.com/user-attachments/assets/40e3e9c2-ba8f-4e6d-bf64-8b2c18781335" />
+
+
+- 테스트를 하는 이유는 <tx:attributes>에서 get* 을 적용해 읽기 전용 트랜잭션 적용으로 했기 때문에 getAll() 같은 조회 메서드 안에서는 쓰기 작업이 막혀야 한다- 라는걸 보여주기 위함이다.
+
+
 
 
 
